--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,117 @@
+:root {
+    --border-color: #ccc;
+    --background-color: #fff;
+    --background-color-1: #06A3DA;
+    --background-color-2: #34AD54;
+    --background-color-3: #2299dd;
+    --background-color-4: #FC836D;
+    --background-color-5: #fc836d5b;
+    --background-color-6: rgba(252, 131, 109, 0.9);
+    --text-color: #fff;
+}
+
+
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif;
+    outline: none;
+    /* border: none; */
+}
+
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background-color: var(--background-color-1);
+}
+
+.container {
+    width: 65vmin;
+    height: 50vmin;
+    display: flex;
+    overflow: hidden;
+    flex-direction: column;
+    border-radius: 10px;
+    background: var(--background-color);
+    padding: 5px;
+}
+
+.container .box {
+    padding: 13px 20px 0;
+    border-radius: 10px;
+    border: 1px solid var(--border-color);
+    width: 100%;
+    height: 100%; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.box .message {
+    padding: 10px 40px;
+    background-color: var(--background-color-1);
+    height: auto;
+    color: white;
+    display: none;
+}
+
+.box form {
+    padding: 10px 40px;
+}
+
+form .input-group {
+    display: flex;
+    flex-direction: column;
+    padding: 10px 0;
+}
+
+.input-group label {
+    font-size: 1.2rem;
+    margin-bottom: 5px;
+}
+
+.input-group input {
+    padding: 5px;
+    font-size: 1.5rem;
+    border-radius: 5px;
+}
+
+.input-group input:focus,
+.input-group input:active {
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);
+}
+
+
+.input-group.btn {
+    float: right;
+}
+
+.input-group button {
     outline: none;
     border: none;
-    box-sizing: border-box;
+    background: var(--background-color-1);
+    border-radius: 5px;
+    color: var(--text-color);
+    padding: 5px 10px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: transform 0.3 ease;
+}
+
+.input-group button:active {
+    transform: scale(0.97);
+}
+
+@media (max-width: 768px) {
+    .container {
+        width: 95vw;
+        padding: 5px;
+        height: auto;
+
+    }
+
 }
