--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 :root {
-    --border-color: #ccc;
+    --border-color: #CFFFD7;
     --background-color: #fff;
     --background-color-1: #06A3DA;
     --background-color-2: #34AD54;
@@ -26,7 +26,7 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-color: var(--background-color-1);
+    background-color: var(--background-color-6);
 }
 
 .container {
@@ -45,7 +45,10 @@ body {
     border-radius: 10px;
     border: 1px solid var(--border-color);
     width: 100%;
-    height: 100%; 
+    height: 100%;
+    background-image: url('images/login.png');
+    background-size: cover;
+    background-position: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -53,9 +56,8 @@ body {
 
 .box .message {
     padding: 10px 40px;
-    background-color: var(--background-color-1);
+    background-color: var(--background-color-4);
     height: auto;
-    color: white;
     display: none;
 }
 
@@ -76,8 +78,11 @@ form .input-group {
 
 .input-group input {
     padding: 5px;
+    border: none;
+    border-bottom: 2px solid var(--background-color-4);
+    background-color: var(--background-color-5);
     font-size: 1.5rem;
-    border-radius: 5px;
+    color: white;
 }
 
 .input-group input:focus,
@@ -93,7 +98,7 @@ form .input-group {
 .input-group button {
     outline: none;
     border: none;
-    background: var(--background-color-1);
+    background: var(--background-color-4);
     border-radius: 5px;
     color: var(--text-color);
     padding: 5px 10px;
